# rustapi

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  compose.yaml  renovate.json
.github/: CODEOWNERS
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/health/: health_repository.rs  health_service.rs  mod.rs
src/domain/: health_model.rs  mod.rs
src/infrastructure/: app_state.rs  application_health.rs  container.rs  mod.rs  observability.rs  openapi.rs  server.rs
src/infrastructure/http/: health_handler.rs  mod.rs
